--- a/app/src/main/res/layout/item_meteorit.xml
+++ b/app/src/main/res/layout/item_meteorit.xml
@@ -1,45 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:id="@+id/cardView"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:foreground="?attr/selectableItemBackground"
+                                    card_view:cardCornerRadius="@dimen/card_recycler_corner_radius"
+                                    card_view:cardElevation="@dimen/card_recycler_elevation">
+
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/standart_margin"
-            android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="start"
-                android:gravity="start"/>
+    <TextView
+        android:id="@+id/name"
+        style="@style/TextAppearance.AppCompat.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/standart_margin"
+        android:layout_marginEnd="@dimen/standart_margin"
+        android:layout_marginTop="@dimen/card_title_margin_top"
+        android:textColor="@color/black" />
 
-            <TextView
-                android:id="@+id/info"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/name"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="start"
-                android:gravity="start" />
+    <TextView
+        android:id="@+id/info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:layout_marginStart="@dimen/standart_margin"
+        android:layout_marginEnd="@dimen/standart_margin"
+        android:layout_marginTop="@dimen/half_margin" />
 
-            <TextView
-                android:id="@+id/size"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="end"
-                android:gravity="end" />
+    <TextView
+        android:id="@+id/size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/info"
+        android:layout_marginBottom="@dimen/standart_margin"
+        android:layout_marginStart="@dimen/standart_margin"
+        android:layout_marginEnd="@dimen/standart_margin"
+        android:layout_marginTop="@dimen/half_margin"/>
 
-        </RelativeLayout>
-
+</RelativeLayout>
 </android.support.v7.widget.CardView>
